# rpn_calculator-Lab2-

./: .gitignore  CMakeLists.txt  Doxyfile  dockerfile
.github/workflows/: ci.yml
html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  rpn_8h_source.html
include/: rpn.h
latex/: files.tex  refman.tex  rpn_8h_source.tex
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
